Planificación temporal Sprint 22

--- a/Documentación/tex/A_Plan_proyecto.tex
+++ b/Documentación/tex/A_Plan_proyecto.tex
@@ -120,6 +120,12 @@ Otro de los objetivos será el de completar la tabla comparativa añadida en el 
  Para este sprint dado que se acercan la fecha de entrega, hemos decido acortar la duración del sprint para acelerar el avance.
  Concretamente en este sprint hemos acordado el centrarnos en los apartados de El estudio de viabilidad, Los Requisitos, y del Diseño de Anexos para poder darlos por cerrados. En la memoria nos centraremos en el apartado de Trabajos relacionados.
  
+\subsection{Sprint 22 (26/06/2020 - 1/07/2020)}
+Durante este sprint el principal objetivo es el de avanzar en la aplicación, terminando de implementar la captura de pantalla, en intentos previos me había encontrado con algún contratiempo. También rematar algunas características que no se habían completado totalmente, en el caso de el menú algunas de las pantallas se encuentran sin enlazar a su botón correspondiente para una correcta navegación.
+
+ En los anexos el objetivo es centrase en el apartado del manual del programador.
+  
+  
  
 \section{Estudio de viabilidad}
 
