Planificación temporal Sprint 23

--- a/Documentación/tex/A_Plan_proyecto.tex
+++ b/Documentación/tex/A_Plan_proyecto.tex
@@ -125,7 +125,10 @@ Durante este sprint el principal objetivo es el de avanzar en la aplicación, te
 
  En los anexos el objetivo es centrase en el apartado del manual del programador.
   
-  
+\subsection{Sprint 23 (1/06/2020 - 3/07/2020)} 
+En el anterior sprint uno de los objetivos era avanzar en el apartado del manual de programador, pero debido a complicaciones con otros objetivos no se ha pudo realizar. Por lo que ese será el primer objetivo para este sprint.
+Siguiendo la dinámica, tratar de avanzar en otros apartados de la documentación.
+En la aplicación teníamos previsto añadir una ayuda o guía para el usuario, para que sea más fácil su creación, se ha planteado la posibilidad de crearla en un html que se habrá y visualice desde la propia aplicación, por lo que otro objetivo trata de investigar de forma rápida, la posibilidad de hacerlo de este modo.
  
 \section{Estudio de viabilidad}
 
