Actualizado Manual del programador

--- a/Documentación/tex/B_Requisitos.tex
+++ b/Documentación/tex/B_Requisitos.tex
@@ -86,9 +86,9 @@ En el presente anexo se detallan los objetivos generales de la aplicación desar
  \end{itemize}
 \subsubsection{Caso de uso 2.1: Seleccionar semilla.}
 \begin{itemize}
-	\item \textbf{Descripción:} El usuario escogerá una de las semilla/planta disponibles y se iniciara el modo AR de esa semilla..
+	\item \textbf{Descripción:} El usuario escogerá una de las semilla/planta disponibles y se iniciara el modo AR de esa semilla.
 	\item \textbf{Precondiciones:} Haber seleccionado el modo de las plantas.
-	\item \textbf{Requisitos:}RF-1 RF-6 RF-2
+	\item \textbf{Requisitos:} RF-1 RF-1.6 RF-2
 	\item \textbf{Acciones:}
 	\begin{enumerate}
 		\item Seleccionar en una de las disponibles.
@@ -105,7 +105,7 @@ En el presente anexo se detallan los objetivos generales de la aplicación desar
 		\item Se ha iniciado el modo AR.
 		\item Sensor de la cámara encendido.
 	\end{enumerate}
-	\item \textbf{Requisitos:}  RF-2 RF2.2
+	\item \textbf{Requisitos:} RF-2 RF-2.2
 	\item \textbf{Acciones:} 
 	\begin{enumerate}
 		\item Pulsar  botón de la esquina inferior derecha.
@@ -152,7 +152,7 @@ En el presente anexo se detallan los objetivos generales de la aplicación desar
 \begin{itemize}
 	\item \textbf{Descripción:} La interfaz del modo AR se hace visible para el usuario.
 	\item \textbf{Precondiciones:} Entrar en el modo jugable AR
-	\item \textbf{Requisitos:} RF2 RF 2.1 RF2.2 RF-2.3
+	\item \textbf{Requisitos:} RF-2 RF-2.1 RF-2.2 RF-2.3
 	\item \textbf{Acciones:}
 		\begin{enumerate}
 			\item Entrar en el modo AR.
@@ -162,13 +162,13 @@ En el presente anexo se detallan los objetivos generales de la aplicación desar
 		\begin{enumerate}
 			\item La interfaz ha sido cargada correctamente.
 		\end{enumerate}
-	\item \textbf{Excepciones:} -Error al cargar el modo AR.
+	\item \textbf{Excepciones:} Error al cargar el modo AR.
 \end{itemize}
 \subsubsection{Caso de uso 3: Ayuda.}
 \begin{itemize}
 	\item \textbf{Descripción:} Proporciona una guía o ayuda básica a los usuarios, respecto al uso de la aplicación.
 	\item \textbf{Precondiciones:} -
-	\item \textbf{Requisitos:} RF-1 RF-3
+	\item \textbf{Requisitos:} RF-1 RF-1.3
 	\item \textbf{Acciones:}
 	\begin{enumerate}
 		\item Seleccionar en el menú el botón Ayuda.
@@ -181,7 +181,7 @@ En el presente anexo se detallan los objetivos generales de la aplicación desar
 \begin{itemize}
 	\item \textbf{Descripción:}  Al completarse un nivel se da la posibilidad de realizar una encuesta sobre la app.
 	\item \textbf{Precondiciones:} Completar un nivel.
-	\item \textbf{Requisitos:} RF-1 RF-5
+	\item \textbf{Requisitos:} RF-1 RF-1.5
 	\item \textbf{Acciones:}
 	\begin{enumerate}
 		\item Finalizar un nivel.
