--- a/Documentación/tex/C_Diseno.tex
+++ b/Documentación/tex/C_Diseno.tex
@@ -45,5 +45,6 @@ En las figuras \ref{fig:Anexos/Interfaz/page3} y \ref{fig:Anexos/Interfaz/page4}
 \imagenPeque{Anexos/Interfaz/page2_2}{Prototipo del menú de tipos de plantas disponibles.}
 
 \imagenPeque{Anexos/Interfaz/page3}{Prototipo de la interfaz en modo AR.}
+A la hora de probar en distintos dispositivos, en los dispositivos que tienen en la pantalla notch(cámara frontal) se aprecio que la interfaz no tenia en cuenta el notch, por lo que este tapaba una parte de la barra de progreso. Para corregirlo se ha bajado la barra de progreso.
 
 \imagenPeque{Anexos/Interfaz/page4}{Prototipo de la interfaz en modo AR.}
