--- a/Documentación/tex/E_Manual_usuario.tex
+++ b/Documentación/tex/E_Manual_usuario.tex
@@ -15,6 +15,9 @@
 También es necesario disponer de un MergeCube, es valido tanto en papel como el original. 
 \section{Instalación}
 
+La instalación de la aplicación es sencilla, como la de cualquier otra APK. Una vez descargado el APK en el dispositivo ejecutarle y seguir los pasos.
+
+Es posible que en el primer intento nos pida habilitar la opción de instalar aplicaciones de terceros, que por defecto en los dispositivos viene desactivada. En principio los propios pasos de instalación nos llevan a la ventana para habilitar la opción. En caso contrarío deberás buscar en opciones del sistema, si tienes dificultades, buscar en google el dispositivo en el que estas intentando la instalación y como se debe activar dicha opción.
 \section{Manual del usuario}
 
 En este apartado se explicará los pasos básicos para aprender a usar la aplicación.
