Planificación temporal Sprint 24

--- a/Documentación/tex/A_Plan_proyecto.tex
+++ b/Documentación/tex/A_Plan_proyecto.tex
@@ -130,6 +130,12 @@ En el anterior sprint uno de los objetivos era avanzar en el apartado del manual
 Siguiendo la dinámica, tratar de avanzar en otros apartados de la documentación.
 En la aplicación teníamos previsto añadir una ayuda o guía para el usuario, para que sea más fácil su creación, se ha planteado la posibilidad de crearla en un html que se habrá y visualice desde la propia aplicación, por lo que otro objetivo trata de investigar de forma rápida, la posibilidad de hacerlo de este modo.
  
+\subsection{Sprint 24 (3/07/2020 - 8/07/2020)} 
+ Durante este sprint se procurara avanzar en los apartados del manual del usuario y a ser posible mas apartados de la memoria.
+ Se ha encontrado un bug en la sincronización entre el menú normal y el de realidad aumentada, el bug en cuestión es que en el apartado de opciones, no se mantiene la opción seleccionada cuando se intercambia entre ambos modos del menú. El funcionamiento esperado es que independientemente de si esta manejando el menú en realidad aumentada o en el modo normal, ambos mantengan la misma configuración.
+ 
+ 
+
 \section{Estudio de viabilidad}
 
 \subsection{Viabilidad económica}
